--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@react-three/fiber": "^8.15.0",
     "@react-three/drei": "^9.88.0",
     "three": "^0.158.0",
-    "@mediapipe/tasks-vision": "^0.10.8"
+    "@mediapipe/tasks-vision": "^0.10.8",
+    "@mediapipe/tasks-text": "^0.10.0",
+    "@mediapipe/tasks-audio": "^0.10.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
